--- a/pages/minha-conta.html
+++ b/pages/minha-conta.html
@@ -22,52 +22,36 @@
 </head>
 
 <body>
-  <!-- Header logada-->
-  <header class="header">
-    <div class="container d-flex justify-content-between align-items-center">
-      <div class="logo">
-        <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
-      </div>
-
-      <div class="input-group mb-3 w-50">
-        <input type="text" class="form-control input-search" placeholder="Buscar...">
-        <a href="busca-filtragem-privada.html">
-          <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+    <header class="header">
+        <div class="container d-flex justify-content-between align-items-center">
+          <div class="logo">
+            <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
           </div>
-        </a>
-      </div>
-
-      <nav class="menu d-flex">
-        <ul class="menu-list d-flex justify-content-between align-items-center">
-          <li class="menu-item"><a href="home-user.html">Inicio</a></li>
-          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
-          <li class="menu-item"><a href="doar.html">Doar</a></li>
-          <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
-                alt="Foto de perfil" width="30px"></a></li>
-          <li class="carrinho">
-            <a href="meu-carrinho.html" rel="noopener noreferrer">
-              <i class="bi bi-cart4"></i>
+      
+          <div class="input-group mb-3 w-50">
+            <input type="text" class="form-control input-search" placeholder="Buscar...">
+            <a href="busca-filtragem-privada.html">
+              <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+              </div>
             </a>
-          </li>
-        </ul>
-      </nav>
-            <nav class="menu d-flex">
-                <ul class="menu-list d-flex justify-content-between align-items-center">
-                    <li class="menu-item"><a href="index.html">Inicio</a></li>
-                    <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
-                    <li class="menu-item"><a href="doar.html">Doar</a></li>
-                    <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
-                                alt="Foto de perfil" width="30px"></a></li>
-                    <li class="carrinho">
-                        <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
-                            <i class="bi bi-cart4"></i>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+          </div>
+      
+          <nav class="menu d-flex">
+            <ul class="menu-list d-flex justify-content-between align-items-center">
+              <li class="menu-item"><a href="home-user.html">Inicio</a></li>
+              <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
+              <li class="menu-item"><a href="doar.html">Doar</a></li>
+              <li class="menu-item login"><a href="minha-conta.html"><img src="../assets/foto-perfil-exemplo.png"
+                    alt="Foto de perfil" width="30px"></a></li>
+              <li class="carrinho">
+                <a href="meu-carrinho.html" rel="noopener noreferrer">
+                  <i class="bi bi-cart4"></i>
+                </a>
+              </li>
+            </ul>
+          </nav>
         </div>
-    </header>
-
+      </header>
 
     <div class="d-flex container justify-content-around">
         <div class="profile-nav col-md-3">
