--- a/pages/rastreamento.html
+++ b/pages/rastreamento.html
@@ -194,6 +194,108 @@
         <div class="col-12">
           <ul id="progressbar" class="text-center">
             <li class="active step0"></li>
+            <li class="step0"></li>
+            <li class="step0"></li>
+            <li class="step0"></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row justify-content-between top">
+        <div class="row d-flex icon-content">
+          <img class="icon" src="../assets/pedido-processado.png">
+          <div class="d-flex flex-column">
+            <p class="font-weight-bold">Pedido<br>Processado</p>
+          </div>
+        </div>
+        <div class="row d-flex icon-content">
+          <img class="icon" src="../assets/pedido-enviado.png">
+          <div class="d-flex flex-column">
+            <p class="font-weight-bold">Pedido<br>Enviado</p>
+          </div>
+        </div>
+        <div class="row d-flex icon-content">
+          <img class="icon" src="../assets/pedido-a-caminho.png">
+          <div class="d-flex flex-column">
+            <p class="font-weight-bold">Pedido<br>A caminho</p>
+          </div>
+        </div>
+        <div class="row d-flex icon-content">
+          <img class="icon" src="../assets/pedido-entregue.png">
+          <div class="d-flex flex-column">
+            <p class="font-weight-bold">Pedido<br>Entregue</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container px-1 px-md-4 py-5 mx-auto">
+    <div class="card">
+      <div class="row d-flex justify-content-between px-3 top">
+        <div class="d-flex">
+          <h5>PEDIDO <span class="text-primary font-weight-bold">#0015</span></h5>
+        </div>
+        <div class="d-flex flex-column text-sm-right">
+          <p class="mb-0">Entrega esperada <span>15/06/23</span></p>
+          <p>Sedex <span class="font-weight-bold">BR984516548DF</span></p>
+        </div>
+      </div>
+      <!-- Add class 'active' to progress -->
+      <div class="row d-flex justify-content-center">
+        <div class="col-12">
+          <ul id="progressbar" class="text-center">
+            <li class="active step0"></li>
+            <li class="active step0"></li>
+            <li class="step0"></li>
+            <li class="step0"></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row justify-content-between top">
+        <div class="row d-flex icon-content">
+          <img class="icon" src="../assets/pedido-processado.png">
+          <div class="d-flex flex-column">
+            <p class="font-weight-bold">Pedido<br>Processado</p>
+          </div>
+        </div>
+        <div class="row d-flex icon-content">
+          <img class="icon" src="../assets/pedido-enviado.png">
+          <div class="d-flex flex-column">
+            <p class="font-weight-bold">Pedido<br>Enviado</p>
+          </div>
+        </div>
+        <div class="row d-flex icon-content">
+          <img class="icon" src="../assets/pedido-a-caminho.png">
+          <div class="d-flex flex-column">
+            <p class="font-weight-bold">Pedido<br>A caminho</p>
+          </div>
+        </div>
+        <div class="row d-flex icon-content">
+          <img class="icon" src="../assets/pedido-entregue.png">
+          <div class="d-flex flex-column">
+            <p class="font-weight-bold">Pedido<br>Entregue</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container px-1 px-md-4 py-5 mx-auto">
+    <div class="card">
+      <div class="row d-flex justify-content-between px-3 top">
+        <div class="d-flex">
+          <h5>PEDIDO <span class="text-primary font-weight-bold">#0015</span></h5>
+        </div>
+        <div class="d-flex flex-column text-sm-right">
+          <p class="mb-0">Entrega esperada <span>15/06/23</span></p>
+          <p>Sedex <span class="font-weight-bold">BR984516548DF</span></p>
+        </div>
+      </div>
+      <!-- Add class 'active' to progress -->
+      <div class="row d-flex justify-content-center">
+        <div class="col-12">
+          <ul id="progressbar" class="text-center">
+            <li class="active step0"></li>
             <li class="active step0"></li>
             <li class="active step0"></li>
             <li class="step0"></li>
@@ -228,6 +330,58 @@
       </div>
     </div>
   </div>
+
+  <div class="container px-1 px-md-4 py-5 mx-auto">
+    <div class="card">
+      <div class="row d-flex justify-content-between px-3 top">
+        <div class="d-flex">
+          <h5>PEDIDO <span class="text-primary font-weight-bold">#0015</span></h5>
+        </div>
+        <div class="d-flex flex-column text-sm-right">
+          <p class="mb-0">Entrega esperada <span>15/06/23</span></p>
+          <p>Sedex <span class="font-weight-bold">BR984516548DF</span></p>
+        </div>
+      </div>
+      <!-- Add class 'active' to progress -->
+      <div class="row d-flex justify-content-center">
+        <div class="col-12">
+          <ul id="progressbar" class="text-center">
+            <li class="active step0"></li>
+            <li class="active step0"></li>
+            <li class="active step0"></li>
+            <li class="active step0"></li>
+          </ul>
+        </div>
+      </div>
+      <div class="row justify-content-between top">
+        <div class="row d-flex icon-content">
+          <img class="icon" src="../assets/pedido-processado.png">
+          <div class="d-flex flex-column">
+            <p class="font-weight-bold">Pedido<br>Processado</p>
+          </div>
+        </div>
+        <div class="row d-flex icon-content">
+          <img class="icon" src="../assets/pedido-enviado.png">
+          <div class="d-flex flex-column">
+            <p class="font-weight-bold">Pedido<br>Enviado</p>
+          </div>
+        </div>
+        <div class="row d-flex icon-content">
+          <img class="icon" src="../assets/pedido-a-caminho.png">
+          <div class="d-flex flex-column">
+            <p class="font-weight-bold">Pedido<br>A caminho</p>
+          </div>
+        </div>
+        <div class="row d-flex icon-content">
+          <img class="icon" src="../assets/pedido-entregue.png">
+          <div class="d-flex flex-column">
+            <p class="font-weight-bold">Pedido<br>Entregue</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
