--- a/pages/editar-endereco.html
+++ b/pages/editar-endereco.html
@@ -10,9 +10,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../styles/arthur.css">
   <link rel="stylesheet" href="../styles/erick.css">
-  <link rel="stylesheet" href="../styles/yago.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <title>Editar Endereço</title>
+  <title>Editar endereço</title>
+  <style>
+    body {
+      background: #e2eaef;
+      font-family: "Open Sans", sans-serif;
+    }
+  </style>
 </head>
 
 <body>
@@ -51,67 +56,64 @@
 
 
   <div class="container">
-
-    <h1>Endereço</h1>
-
-    <div class="containerbox ">
-
-
-      <form class="row g-3">
-        <div class="col-md-6">
-          <label for="inputEmail4" class="form-label">UF</label>
-          <input type="UF" class="form-control" id="inputUF">
-        </div>
-        <div class="col-md-4">
-          <label for="inputCity" class="form-label">CIDADE</label>
-          <input type="text" class="form-control" id="inputCity">
-        </div>
-
-        <div class="col-12">
-          <label for="inputAddress" class="form-label">Endereço</label>
-          <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-        </div>
-        <div class="col-12">
-          <label for="inputAddress2" class="form-label">Bairro</label>
-          <input type="text" class="form-control" id="inputAddress2">
-        </div>
-        <div class="col-md-6">
-          <label for="inputCity" class="form-label">COMPLEMENTO</label>
-          <input type="text" class="form-control" id="inputCity">
-        </div>
-        <div class="col-md-4">
-          <label for="inputZip" class="form-label">CEP</label>
-          <input type="text" class="form-control" id="inputZip">
-        </div>
-        <div class="col-md-2">
-
-        </div>
-        <div class="col-12">
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="gridCheck">
-            <label class="form-check-label" for="gridCheck">
-              Salvar como endereço principal
-            </label>
-          </div>
-        </div>
-        <div class="col-12">
-          <button type="submit" class="btn btn-primary">Salvar</button>
-
-        </div>
-      </form>
-
-
-      <div class="containerboxx ">
-
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31797687.96452911!2d-73.0769095094537!3d-13.378003783073062!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9c59c7ebcc28cf%3A0x295a1506f2293e63!2sBrasil!5e0!3m2!1spt-PT!2sbr!4v1686454154368!5m2!1spt-PT!2sbr"
-          width="440" height="469" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-      </div>
-
+    <div class="d-flex align-items-center w-100 justify-content-center p-3">
+      <h1>Endereço</h1>
     </div>
-
-  </div>
+    <div class="containerbox">
+      <div class="d-flex justify-content-center">
+        <div class="w-50 mx-2">
+          <form class="row g-3">
+            <div class="col-md-4">
+              <label for="inputCEP" class="form-label">CEP</label>
+              <input type="text" class="form-control" id="inputCEP" placeholder="CEP">
+            </div>
+            <div class="col-md-4">
+              <label for="inputUF" class="form-label">UF</label>
+              <select id="inputUF" class="form-select">
+                <option selected>Escolha...</option>
+                <option>DF</option>
+                <option>GO</option>
+              </select>
+            </div>
+            <div class="col-md-4">
+              <label for="inputCidade" class="form-label">Cidade</label>
+              <input type="text" class="form-control" id="inputCidade" placeholder="Cidade">
+            </div>
+            <div class="col-8">
+              <label for="inputEndereco" class="form-label">Endereço</label>
+              <input type="text" class="form-control" id="inputEndereco"
+                placeholder="Ex.: Rua Coronel Lenoro 45, Brasília, DF">
+            </div>
+            <div class="col-4">
+              <label for="inputBairro" class="form-label">Bairro</label>
+              <input type="text" class="form-control" id="inputBairro" placeholder="Ex.: Taguatinga, Ceilândia, etc.">
+            </div>
+            <div class="col-6">
+              <label for="inputComplemento" class="form-label">Complemento</label>
+              <input type="text" class="form-control" id="inputComplemento" placeholder="Ex.: apto, casa, etc.">
+            </div>
+            <div class="col-6">
+              <label for="inputPontoReferencia" class="form-label">Ponto de Referência</label>
+              <input type="text" class="form-control" id="inputPontoReferencia" placeholder="Ex.: Ao lado da farmácia">
+            </div>
+            <div class="col-12">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck">
+                <label class="form-check-label" for="gridCheck">
+                  Salvar como endereço principal
+                </label>
+              </div>
+            </div>
+            <div class="col-12">
+              <a href="minha-conta.html" class="btn btn-primary">Salvar</a>
+            </div>
+          </form>
+        </div>
+        <div class="border border-dark w-50 mx-2 d-flex justify-content-center align-items-center">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31797687.96452911!2d-73.0769095094537!3d-13.378003783073062!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9c59c7ebcc28cf%3A0x295a1506f2293e63!2sBrasil!5e0!3m2!1spt-PT!2sbr!4v1686454154368!5m2!1spt-PT!2sbr"
+            style="width: 100%; height: 100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+    </div>
 </body>
-<!-- Header deslogada-->
