--- a/pages/meus-favoritos.html
+++ b/pages/meus-favoritos.html
@@ -7,10 +7,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../styles/arthur.css">
   <link rel="stylesheet" href="../styles/erick.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Open+Sans">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <style>
+    body {
+      background: #e2eaef;
+      font-family: "Open Sans", sans-serif;
+    }
+
+    .wish-icon {
+      position: relative;
+      right: -90px;
+      top: 10px;
+      z-index: 99;
+      cursor: pointer;
+      font-size: 16px;
+      color: red;
+    }
+
+    .wish-icon .fa-heart {
+      color: #ff6161;
+    }
+  </style>
+  <script>
+  </script>
   <title>Meus Favoritos</title>
 
   <style>
@@ -61,8 +90,178 @@
   </div>
 
 
-  <h1>Meus Favoritos</h1>
+  <div class="container">
+    <div>
+      <div class="row d-flex align-items-center w-100">
+        <div class="col-md-11 p-3">
+          <h3 class="mb-0"><b>Favoritos</b></h3>
+        </div>
+      </div>
+      <div class="row g-2 d-flex align-items-center w-100">
+        <div class="col-md-3">
+          <select class="form-select">
+            <option selected>Categorias</option>
+            <option value="salto-alto">Salto alto</option>
+            <option value="sapato-social">Sapato social</option>
+            <option value="tenis">Tênis</option>
+          </select>
+        </div>
+        <div class="col-md-3">
+          <select class="form-select">
+            <option selected>Classificação</option>
+            <option value="pe-esquerdo">Pé esquerdo</option>
+            <option value="pe-direito">Pé direito</option>
+            <option value="par">Par</option>
+          </select>
+        </div>
+        <div class="col-md-3">
+          <select class="form-select">
+            <option selected>Tipo de anúncio</option>
+            <option value="venda">Venda</option>
+            <option value="doacao">Doação</option>
+          </select>
+        </div>
+        <div class="col-md-3">
+          <select class="form-select">
+            <option selected>Preço</option>
+            <option value="barato">Mais barato</option>
+            <option value="caro">Mais caro</option>
+          </select>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="w-100 row text-center align-items-center p-4">
+        <div class="col-md-4">
+          <span class="wish-icon"><i class="bi bi-heart"></i></span>
+          <div class="thumb-wrapper">
+            <div class="img-box">
+              <a href="produto-anuncio-public+.html">
+                <img src="../assets/salto-1.png" class="rounded mx-auto" alt="Foto Sapato" width="200px">
+              </a>
+            </div>
+            <div class="thumb-content">
+              <h4>Salto Alto Vermelho</h4>
+              <p class="item-price"><strike>R$ 99,90</strike> <span>R$ 69,90</span></p>
+              <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <span class="wish-icon"><i class="bi bi-heart"></i></span>
+          <div class="thumb-wrapper">
+            <div class="img-box">
+              <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="rounded mx-auto"
+                  alt="Foto Sapato" width="200px"></a>
+            </div>
+            <div class="thumb-content">
+              <h4>Salto Alto Preto</h4>
+              <p class="item-price"><strike>R$ 129,90</strike> <span>R$ 99,90</span></p>
+              <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <span class="wish-icon"><i class="bi bi-heart"></i></span>
+          <div class="thumb-wrapper">
+            <div class="img-box">
+              <a href="produto-anuncio-public+.html"><img src="../assets/salto-3.png" class="rounded mx-auto"
+                  alt="Foto Sapato" width="200px"></a>
+            </div>
+            <div class="thumb-content">
+              <h4>Salto Alto Rosa</h4>
+              <p class="item-price"><strike>R$99,00</strike> <span>R$79,90</span></p>
+              <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <div class="w-100 row text-center align-items-center p-4">
+        <div class="col-md-4">
+          <span class="wish-icon"><i class="bi bi-heart"></i></span>
+          <div class="thumb-wrapper">
+            <div class="img-box">
+              <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="rounded mx-auto"
+                  alt="Foto Sapato" width="200px"></a>
+            </div>
+            <div class="thumb-content">
+              <h4>Salto Alto Preto</h4>
+              <p class="item-price"><strike>R$ 129,90</strike> <span>R$ 99,90</span></p>
+              <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <span class="wish-icon"><i class="bi bi-heart"></i></span>
+          <div class="thumb-wrapper">
+            <div class="img-box">
+              <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="rounded mx-auto"
+                  alt="Foto Sapato" width="200px"></a>
+            </div>
+            <div class="thumb-content">
+              <h4>Salto Alto Vermelho</h4>
+              <p class="item-price"><strike>R$99,00</strike> <span>R$79,90</span></p>
+              <a href="meu-carrinho-public.html" class="btn btn-primary">Adicionar ao carrinho</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- basebord -->
+  <footer id="contato" class="basebord">
+    <div class="container">
+      <div class="info-basebord">
+        <a href="#home"><img class="logo-basebord" src="../assets/pe-amigo.png" alt="Otimize-logo"></a>
+        <div class="contactos-basebord">
+          <div class="contactos-basebord-list">
+            <div class="contactos-basebord-container">
+              <p>Termos de uso</p>
+            </div>
+
+            <div class="contactos-basebord-container">
+              <p>Política de Privacidade</p>
+            </div>
+
+            <div class="contactos-basebord-container">
+              <p>contato@peamigo.com.br</p>
+            </div>
+
+            <div class="contactos-basebord-container">
+              <p>0800 000 0000</p>
+            </div>
+
+            <div class="contactos-basebord-container">
+              <p>Brasília</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="social-medias-basebord">
+          <h3 class="social-medias-title">Fique conectado conosco</h3>
+          <div>
+            <a target="_blank" rel="noopener noreferrer">
+              <img class="social-medias-logo" src="../assets/Grupo 10647.png" alt="Logo Facebook">
+            </a>
+            <a target="_blank" rel="noopener noreferrer">
+              <img class="social-medias-logo" src="../assets/Grupo 10648.png" alt="Logo Instagram">
+            </a>
+            <a target="_blank" rel="noopener noreferrer"><img class="social-medias-logo" src="../assets/Grupo 10649.png"
+                alt="Logo Linkedin"></a>
+
+          </div>
+        </div>
+      </div>
+
+      <p class="copy"> <sup class="copy-symbol">&#169;</sup> 2022 Todos os direitos reservados</p>
+    </div>
+  </footer>
+  <!-- basebord end -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
 
 </body>
 
