--- a/pages/perfil-anunciante-privado.html
+++ b/pages/perfil-anunciante-privado.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../styles/arthur.css">
   <link rel="stylesheet" href="../styles/erick.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <title>Perfil do anunciante Public</title>
+  <title>Perfil do anunciante privado</title>
   <style>
     body {
       background: #e2eaef;
@@ -21,16 +21,16 @@
 </head>
 
 <body>
-  <!-- Header deslogada-->
+  <!-- Header logada-->
   <header class="header">
     <div class="container d-flex justify-content-between align-items-center">
       <div class="logo">
-        <a href="index.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+        <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
       </div>
 
       <div class="input-group mb-3 w-50">
         <input type="text" class="form-control input-search" placeholder="Buscar...">
-        <a href="busca-filtragem-public.html">
+        <a href="busca-filtragem-privada.html">
           <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
           </div>
         </a>
@@ -38,12 +38,13 @@
 
       <nav class="menu d-flex">
         <ul class="menu-list d-flex justify-content-between align-items-center">
-          <li class="menu-item"><a href="index.html">Inicio</a></li>
-          <li class="menu-item"><a href="adquirir-public.html">Adquirir</a></li>
-          <li class="menu-item"><a href="doar-public.html">Doar</a></li>
-          <li class="menu-item login"><a href="login.html">Login</a></li>
+          <li class="menu-item"><a href="home-user.html">Inicio</a></li>
+          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
+          <li class="menu-item"><a href="doar.html">Doar</a></li>
+          <li class="menu-item login"><a href="minha-conta.html"><img src="../assets/foto-perfil-exemplo.png"
+                alt="Foto de perfil" width="30px"></a></li>
           <li class="carrinho">
-            <a href="meu-carrinho-public.html" rel="noopener noreferrer">
+            <a href="meu-carrinho.html" rel="noopener noreferrer">
               <i class="bi bi-cart4"></i>
             </a>
           </li>
@@ -75,7 +76,7 @@
       </div>
       <div class="col-md-4">
         <div class="col-md-8 border border-dark justify-content-center">
-          <a href="login.html" style="color: black"><img src="../assets/chat-redondo-icone.png"
+          <a href="chat-anuncios.html" style="color: black"><img src="../assets/chat-redondo-icone.png"
               alt="foto-perfil-exemplo" width="50px" class="rounded mx-auto">Mande uma mensagem</a>
         </div>
       </div>
@@ -87,7 +88,7 @@
       <div class="col-md-4">
         <div class="thumb-wrapper">
           <div class="img-box">
-            <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="rounded mx-auto"
+            <a href="produto-anuncio-privado.html"><img src="../assets/529638.png" class="rounded mx-auto"
                 alt="Foto Sapato" width="200px"></a>
           </div>
           <div class="thumb-content">
@@ -100,7 +101,7 @@
       <div class="col-md-4">
         <div class="thumb-wrapper">
           <div class="img-box">
-            <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="rounded mx-auto"
+            <a href="produto-doador-privado.html"><img src="../assets/salto-2.png" class="rounded mx-auto"
                 alt="Foto Sapato" width="200px"></a>
           </div>
           <div class="thumb-content">
@@ -113,7 +114,7 @@
       <div class="col-md-4">
         <div class="thumb-wrapper">
           <div class="img-box">
-            <a href="produto-anuncio-public+.html"><img src="../assets/salto-3.png" class="rounded mx-auto"
+            <a href="produto-anuncio-privado.html"><img src="../assets/salto-3.png" class="rounded mx-auto"
                 alt="Foto Sapato" width="200px"></a>
           </div>
           <div class="thumb-content">
