--- a/pages/produto-anuncio-privado.html
+++ b/pages/produto-anuncio-privado.html
@@ -22,48 +22,48 @@
 
 <body>
   <!-- Header logada-->
-<header class="header">
-  <div class="container d-flex justify-content-between align-items-center">
-    <div class="logo">
-      <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
-    </div>
+  <header class="header">
+    <div class="container d-flex justify-content-between align-items-center">
+      <div class="logo">
+        <a href="home-user.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+      </div>
 
-    <div class="input-group mb-3 w-50">
-      <input type="text" class="form-control input-search" placeholder="Buscar...">
-      <a href="busca-filtragem-privada.html">
-        <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
-        </div>
-      </a>
-    </div>
+      <div class="input-group mb-3 w-50">
+        <input type="text" class="form-control input-search" placeholder="Buscar...">
+        <a href="busca-filtragem-privada.html">
+          <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+          </div>
+        </a>
+      </div>
 
-    <nav class="menu d-flex">
-      <ul class="menu-list d-flex justify-content-between align-items-center">
-        <li class="menu-item"><a href="home-user.html">Inicio</a></li>
-        <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
-        <li class="menu-item"><a href="doar.html">Doar</a></li>
-        <li class="menu-item login"><a href="minha-conta.html"><img src="../assets/foto-perfil-exemplo.png"
-              alt="Foto de perfil" width="30px"></a></li>
-        <li class="carrinho">
-          <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
-            <i class="bi bi-cart4"></i>
-          </a>
-        </li>
-      </ul>
-    </nav>
+      <nav class="menu d-flex">
+        <ul class="menu-list d-flex justify-content-between align-items-center">
+          <li class="menu-item"><a href="home-user.html">Inicio</a></li>
+          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
+          <li class="menu-item"><a href="doar.html">Doar</a></li>
+          <li class="menu-item login"><a href="minha-conta.html"><img src="../assets/foto-perfil-exemplo.png"
+                alt="Foto de perfil" width="30px"></a></li>
+          <li class="carrinho">
+            <a href="meu-carrinho.html" rel="noopener noreferrer">
+              <i class="bi bi-cart4"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <div class="z-3 position-fixed bottom-0 end-0 px-5 pb-3">
+    <a href="chat-compras.html" class="botao_chat">
+      <i class="bi bi-chat-text h1"></i>
+    </a>
   </div>
-</header>
-
-<div class="z-3 position-fixed bottom-0 end-0 px-5 pb-3">
-  <a href="chat-compras.html" class="botao_chat">
-    <i class="bi bi-chat-text h1"></i>
-  </a>
-</div>
 
 
   <div class="container">
     <div class="d-flex align-items-center w-100 text-center p-3">
       <h3>Nome Anunciante</h3>
-      <a href="perfil-anunciante-public.html" class="btn btn-info m-3">Visitar perfil</a>
+      <a href="perfil-anunciante-privado.html" class="btn btn-info m-3">Visitar perfil</a>
     </div>
     <div class="d-flex justify-content-center">
       <div class="w-50 border p-2">
